@@ -1,3 +1,7 @@
+2009-06-23  Alexander Mamonov  <mamonov@gmail.com>
+
+	* image/imread.m: New test.
+
 2009-06-22  Ben Abbott <bpabbott@mac.com>
 
 	* plot/grid.m: Add missing semi-colon. Allow grid to be toggled
